--- a/sass/partials/slides/_s-paper.scss
+++ b/sass/partials/slides/_s-paper.scss
@@ -123,7 +123,7 @@
         }
         .back:before {
           content: 'Back';
-          top: 95px;
+          top: 2.2em;
           @extend .it;
           @include transform(rotateZ(180deg));
         }
